better mobile support

--- a/layouts/partials/styles.html
+++ b/layouts/partials/styles.html
@@ -241,6 +241,10 @@
     margin:0 0 50px;
   }
 
+  ul.posts_listing {
+    padding: 0;
+  }
+
   .posts_listing li {
     margin:0 0 25px 15px;
   }
@@ -305,22 +309,22 @@
     }
 
     #nav li {
-      font-size:15px;
+      font-size:20px;
       padding: 0 15px;
     }
 
     #content {
       margin-top:0;
       padding-top:50px;
-      font-size:17px;
+      font-size:20px;
     }
 
     #content h1 {
-      font-size:25px;
+      font-size:27px;
     }
 
     #content h2 {
-      font-size:22px;
+      font-size:24px;
     }
 
     .posts_listing li div {
@@ -339,22 +343,22 @@
     }
 
     #nav li {
-      font-size:15px;
+      font-size:18px;
       padding: 0 10px;
     }
 
     #content {
       margin-top:0;
       padding-top:20px;
-      font-size:17px;
+      font-size:20px;
     }
 
     #content h1 {
-      font-size:25px;
+      font-size:27px;
     }
 
     #content h2 {
-      font-size:22px;
+      font-size:24px;
     }
 
     .posts_listing li div{
