--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -11,7 +11,7 @@
         data-reactions-enabled="0"
         data-emit-metadata="0"
         data-input-position="bottom"
-        data-theme="light"
+        data-theme="prefers-color-scheme"
         data-lang="en"
         data-loading="lazy"
         crossorigin="anonymous"
