wider list items on mobile

--- a/layouts/partials/styles.html
+++ b/layouts/partials/styles.html
@@ -313,6 +313,11 @@
       padding: 0 15px;
     }
 
+    /* For the table of contents */
+    #content ul li {
+      margin-top: 5px;
+    }
+
     #content {
       margin-top:0;
       padding-top:50px;
@@ -345,6 +350,11 @@
     #nav li {
       font-size:18px;
       padding: 0 10px;
+    }
+
+    /* For the table of contents */
+    #content ul li {
+      margin-top: 5px;
     }
 
     #content {
